devops/k8s/manifests/k04/policies-cluster/require-team-label.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-team
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
      validate:
        message: "label 'team' is required"
        pattern:
          metadata:
            labels:
              team: "?*"
