devops/k8s/manifests/k04/policies-cluster/validate-replica-count.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-replica-count
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: >- 
          Replica count for a Deployment must be greater than or equal to 2.
        pattern:
          spec:
            replicas: ">=2"
